--- a/src/Header.css
+++ b/src/Header.css
@@ -1,5 +1,5 @@
 .Header {
 	padding: 0.25rem 0.75rem;
 	display: grid;
-	grid-template: "primary secondary" / auto min-content;
+	grid-template: "primary secondary" / auto max-content;
 }
